--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
   }
 }
@@ -36,5 +36,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- 這一行非常重要！它告訴 Vite 載入你的 React 程式碼 -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
